<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <ScrollView
        android:id="@+id/ingredients_popup"
        android:layout_width="wrap_content"
        android:layout_height="585dp"
        android:layout_above="@id/buttonContainer"
        android:layout_alignParentTop="true"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="35dp">

        <LinearLayout
            android:id="@+id/editTextContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ingredients_popup_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/ingredients_popup_info"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAddEditText"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="00dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@+id/buttonGetMacros"
            android:background="@color/button_color_popup"
            android:text="@string/add_ingredient" />

        <Button
            android:id="@+id/buttonGetMacros"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/button_color_popup"
            android:text="@string/predict_macros_button" />
    </RelativeLayout>


</RelativeLayout>